Update to Spring Boot 3.2.3, Gradle 8.5 and Java 21